...
            android:gravity="center"
            android:text="@string/fill_name_to_start"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_default"
            android:background="@drawable/gray_border"
            android:gravity="center"
            android:inputType="textShortMessage"
            android:maxLines="0"
            android:padding="@dimen/space_medium" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            android:onClick="startQuiz"
...
