...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/question_radio_group"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Some Question here" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_default"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_view_question" />

    <Button
        android:id="@+id/button_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_default"
        android:text="@string/answer"
        android:textColor="@android:color/white"
        android:visibility="gone"
...
